<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <string name="item1">item1</string>
    <string name="item2">item2</string>
    <string name="item3">item3</string>
    <string name="item4">item4</string>
    <string name="isChecked">item4 is checked</string>
    <string name="checkBox1">Отобразить группу меню</string>
    <string name="checkBox2">Отобразить пункт меню</string>
    <string name="textView1">Text color</string>
    <string name="textView2">Text size</string>

</resources>
