<menu xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.myapplication.MainActivity">
    <item
        android:icon="@android:drawable/btn_plus"
        android:id="@+id/action_settings"
        android:orderInCategory="1"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom" />
    <item
       android:icon="@android:drawable/sym_call_outgoing"
        android:id="@+id/action_item1"
        android:orderInCategory="2"
        android:title="@string/item1"
        app:showAsAction="never"/>
    <group
        android:id="@+id/group1">
    <item
        android:id="@+id/action_item2"
        android:orderInCategory="3"
        android:title="@string/item2"
        app:showAsAction="never" />
        <item
            android:id="@+id/action_item3"
            android:orderInCategory="4"
            android:title="@string/item3"
            app:showAsAction="never" />
    </group>
</menu>
